website/versioned_docs/version-2.0.0/api/README.md
---
title: stix
id: version-2.0.0-README
original_id: README
---

#  stix
Stix
====

A module-based, TypeScript-first Node.js® framework.

Note
----

This module is being developed as you're reading this. What's missing?

*   Wetland ORM module.
*   CLI tools.
*   Documentation.
*   Test coverage.

License
-------

MIT.

## Index

### External modules

* ["Library/Application/Application"](modules/application)
* ["Library/Application/ApplicationEvents"](modules/applicationevents)
* ["Library/Application/index"](modules/index)
* ["Library/Config/Config"](modules/config)
* ["Library/Config/ConfigInterface"](modules/configinterface)
* ["Library/Config/ControllerManagerConfigType"](modules/controllermanagerconfigtype)
* ["Library/Config/LoggerConfigInterface"](modules/loggerconfiginterface)
* ["Library/Config/ModuleManagerConfigInterface"](modules/modulemanagerconfiginterface)
* ["Library/Config/ResponseConfigInterface"](modules/responseconfiginterface)
* ["Library/Config/RouterConfigInterface"](modules/routerconfiginterface)
* ["Library/Config/RoutesConfigInterface"](modules/routesconfiginterface)
* ["Library/Config/ServerConfigInterface"](modules/serverconfiginterface)
* ["Library/Config/index"](modules/index)
* ["Library/Controller/AbstractActionController"](modules/abstractactioncontroller)
* ["Library/Controller/ControllerFactoryFactory"](modules/controllerfactoryfactory)
* ["Library/Controller/ControllerManager"](modules/controllermanager)
* ["Library/Controller/ControllerManagerFactory"](modules/controllermanagerfactory)
* ["Library/Controller/ControllerTypes"](modules/controllertypes)
* ["Library/Controller/index"](modules/index)
* ["Library/Core/Types"](modules/types)
* ["Library/Core/index"](modules/index)
* ["Library/Error/InvalidActionResultError"](modules/invalidactionresulterror)
* ["Library/Error/NotFoundError"](modules/notfounderror)
* ["Library/Error/index"](modules/index)
* ["Library/EventManager/Event"](modules/event)
* ["Library/EventManager/EventManager"](modules/eventmanager)
* ["Library/EventManager/EventManagerFactory"](modules/eventmanagerfactory)
* ["Library/EventManager/EventManagerTypes"](modules/eventmanagertypes)
* ["Library/EventManager/ModuleManagerEvents"](modules/modulemanagerevents)
* ["Library/EventManager/SharedEventManager"](modules/sharedeventmanager)
* ["Library/EventManager/index"](modules/index)
* ["Library/Interface/ContextInterface"](modules/contextinterface)
* ["Library/Interface/index"](modules/index)
* ["Library/Logger/LoggerService"](modules/loggerservice)
* ["Library/Logger/LoggerServiceFactory"](modules/loggerservicefactory)
* ["Library/Logger/index"](modules/index)
* ["Library/ModuleManager/ModuleClassInterface"](modules/moduleclassinterface)
* ["Library/ModuleManager/ModuleInterface"](modules/moduleinterface)
* ["Library/ModuleManager/ModuleManager"](modules/modulemanager)
* ["Library/ModuleManager/ModuleManagerFactory"](modules/modulemanagerfactory)
* ["Library/ModuleManager/index"](modules/index)
* ["Library/Response/ClientErrorResponse"](modules/clienterrorresponse)
* ["Library/Response/InformationalResponse"](modules/informationalresponse)
* ["Library/Response/RedirectionResponse"](modules/redirectionresponse)
* ["Library/Response/Response"](modules/response)
* ["Library/Response/ResponseService"](modules/responseservice)
* ["Library/Response/ResponseServiceFactory"](modules/responseservicefactory)
* ["Library/Response/ResponseTypes"](modules/responsetypes)
* ["Library/Response/ServerErrorResponse"](modules/servererrorresponse)
* ["Library/Response/SuccessfulResponse"](modules/successfulresponse)
* ["Library/Response/index"](modules/index)
* ["Library/Router/RegisteredRouteInterface"](modules/registeredrouteinterface)
* ["Library/Router/Route"](modules/route)
* ["Library/Router/RouteInterface"](modules/routeinterface)
* ["Library/Router/RouterService"](modules/routerservice)
* ["Library/Router/RouterServiceFactory"](modules/routerservicefactory)
* ["Library/Router/index"](modules/index)
* ["Library/Server/HttpStatusCodes"](modules/httpstatuscodes)
* ["Library/Server/RequestMethods"](modules/requestmethods)
* ["Library/Server/ServerService"](modules/serverservice)
* ["Library/Server/ServerServiceFactory"](modules/serverservicefactory)
* ["Library/Server/index"](modules/index)
* ["Library/ServiceManager/AbstractPluginManager"](modules/abstractpluginmanager)
* ["Library/ServiceManager/FactoryInterface"](modules/factoryinterface)
* ["Library/ServiceManager/ServiceManager"](modules/servicemanager)
* ["Library/ServiceManager/ServiceManagerConfigInterface"](modules/servicemanagerconfiginterface)
* ["Library/ServiceManager/ServiceManagerInterface"](modules/servicemanagerinterface)
* ["Library/ServiceManager/index"](modules/index)
* ["Library/index"](modules/index)
* ["config/index"](modules/index)
* ["config/logger"](modules/logger)
* ["config/response"](modules/response)
* ["config/routes"](modules/routes)
* ["config/server"](modules/server)
* ["config/services"](modules/services)
* ["debug"](modules/_debug_.md)
* ["index"](modules/_index_.md)
* ["middleware/dispatchMiddleware"](modules/dispatchmiddleware)
* ["middleware/index"](modules/index)
* ["middleware/requestMiddleware"](modules/requestmiddleware)
* ["middleware/routerMiddleware"](modules/routermiddleware)

---

